--- a/vars/groovydoc/stylesheet.css
+++ b/vars/groovydoc/stylesheet.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.0 | MIT License | https://github.com/anishathalye/?normalize */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
     display: block
 }
